[package]
name = "first-free-subnet"
version = "0.1.0"
authors = ["Viljar Võidula <viljar@testreel.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "first_free_subnet"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
ip_network = "0.3.1"
cidr = "0.1.0"
serde_derive = "1.0.80"
serde = "1.0.80"
neon-serde = "0.4.0"